--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -168,6 +168,7 @@ input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit
 .pl-10{padding-left:10px}
 .pl-20{padding-left:20px}
 .pl-23{padding-left:23px}
+.pl-25{padding-left:25px}
 .pl-30{padding-left:30px}
 .pl-40{padding-left:40px}
 .pl-45{padding-left:45px}
