--- a/src/main/resources/templates/page/cn/about.html
+++ b/src/main/resources/templates/page/cn/about.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
-              Int’l Conf. On Advances in Biological Science and Technology<br/>
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
+              Int'l Conf On Advances in Biological Science and Technology<br/>
 							2019国际前沿生物科学与技术国际会议(ICABST2019)<br/>
-              2019年12月26日-28日
+              <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -66,7 +66,7 @@
 
   <div class="w-1200 bg_white pt-30">
 
-    <div class="page; lh-40">
+    <div class="page; f-20 lh-40" style="text-align: justify; font-family:'Times New Roman';">
       <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会详情</div>
         <div class="public_p pb-20 pl-30">
@@ -87,13 +87,13 @@
 
           <p><strong>重要时间</strong></p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;报到签到：A. 2019年12月26日 15:00-17:00</br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B. 2019年12月27日 8:00-8:40
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B. 2019年12月27日 8:00-8:40
 					</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;摘要截止：2019年10月20日</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注册截止：2019年10月31日（逾期按照后期注册处理—后期注册费用较高)</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全文截止：全文长年均可投稿，本批次7月30日截止<br />&nbsp;</p>
 					
-					<p><strong>有关签证信息、泰国当地交通及住宿信息，请参考<a title="会议地点" class="pointer" href="/cn/venue" style="color: #102cf7"><u>会议地点</u></a>中相关内容</strong></p>
+					<p><strong>有关签证信息、泰国当地交通及住宿信息，请参考<a title="会议地点" class="pointer" href="/cn/venue" style="color: #102cf7" target="_blank"><u>会议地点</u></a>中相关内容</strong></p>
         </div>
 
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会议题</div>
@@ -132,23 +132,22 @@
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>摘要截止日期: 2019年10月20日</p>
-            <p>全文截稿日期: 长年征稿（本批次7月30日截止）</p>
+            <p>摘要投稿: 2019年10月20日截止</p>
+            <p>全文投稿: 本批次7月30日截止</p>
             <p>会议日期:2019年12月26日-28日</p>
 						<p>参会注册截止: 2019年10月31日</p>
-						<p>**逾期未完成注册，将按照后期注册处理</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
         </ul>
       </div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
         <ul>
             <p>联系人：孙老师，刘老师</p>
 						<p>会务邮箱：icabst@apanse.com</p>
