--- a/src/main/resources/templates/page/cn/cfp.html
+++ b/src/main/resources/templates/page/cn/cfp.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
-              Int’l Conf. On Advances in Biological Science and Technology<br/>
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
+              Int'l Conf On Advances in Biological Science and Technology<br/>
 							2019国际前沿生物科学与技术国际会议(ICABST2019)<br/>
-              2019年12月26日-28日
+              <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -66,7 +66,7 @@
 
 <div class="w-1200 bg_white pt-30">
 
-  <div class="page; lh-40">
+  <div class="page; f-20 lh-40" style="text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="public_p pb-20">
         <article class="row-txt">
@@ -88,8 +88,8 @@
 								<table border="1" cellpadding="0" cellspacing="0" style="width:100.0%;" width="100%">
 									<tbody>
 										<tr>
-											<th style=" height: 38px; width: 120px; text-align:center">类型</th>
-											<th style=" height: 38px; width: 240px; text-align:center">期刊领域</th>
+											<th style=" height: 38px; width: 100px; text-align:center">类型</th>
+											<th style=" height: 38px; width: 280px; text-align:center">期刊领域</th>
 											<th style=" height: 38px; width: 200px; text-align:center">IF及分区</th>
 											<th style=" height: 38px; text-align:center">发表详情</th>
 										</tr>
@@ -99,7 +99,7 @@
 											<td rowspan="7"style="height: 38px;" align="center">各领域涵盖多本期刊<br/>影响因子0.5-4<br/>中科院2-4区</td>
 											<td rowspan="10" style="height: 38px;" align="center">SCI及EI期刊均为正刊发表, 非会议论文,不带任何会议信息<br/><br/>检索类型为Journal Article(期刊全文检索)<br/><br/>发表周期一般为3-6个月</td>
 										</tr>
-										<tr><td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;生物化学、分子生物学SCI期刊</td></tr>
+										<tr><td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;生物化学、分子生物SCI期刊</td></tr>
 										<tr><td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;材料类SCI期刊</td></tr>
 										<tr><td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;动植物学SCI期刊</td></tr>
 										<tr><td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;医药学SCI期刊</td></tr>
@@ -114,7 +114,7 @@
 										<tr><td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;综合领域EI期刊</td></tr>
 										<tr>
 											<th style="height: 76px; text-align:center">会议论文</th>
-											<td colspan="2" style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;我方合作发表的会议论文分为EI检索和ISTP(CPCI-S)检索两种<br/>&nbsp;&nbsp;&nbsp;&nbsp;投稿前请先咨询</td>
+											<td colspan="2" style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;会议论文分为EI检索和ISTP(CPCI-S)检索两种<br/>&nbsp;&nbsp;&nbsp;&nbsp;投稿前请先咨询</td>
 											<td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;2019年底发表<br/>&nbsp;&nbsp;&nbsp;&nbsp;2020年初完成检索</td>
 										</tr>
 									</tbody>
@@ -198,23 +198,22 @@
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>摘要截止日期: 2019年10月20日</p>
-            <p>全文截稿日期: 长年征稿（本批次7月30日截止）</p>
+            <p>摘要投稿: 2019年10月20日截止</p>
+            <p>全文投稿: 本批次7月30日截止</p>
             <p>会议日期:2019年12月26日-28日</p>
 						<p>参会注册截止: 2019年10月31日</p>
-						<p>**逾期未完成注册，将按照后期注册处理</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
         </ul>
       </div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
         <ul>
             <p>联系人：孙老师，刘老师</p>
 						<p>会务邮箱：icabst@apanse.com</p>
