--- a/src/main/resources/templates/page/cn/registration.html
+++ b/src/main/resources/templates/page/cn/registration.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
-              Int’l Conf. On Advances in Biological Science and Technology<br/>
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
+              Int'l Conf On Advances in Biological Science and Technology<br/>
 							2019国际前沿生物科学与技术国际会议(ICABST2019)<br/>
-              2019年12月26日-28日
+              <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -66,7 +66,7 @@
 
 <div class="w-1200 bg_white pt-30">
 
-  <div class="page; lh-40">
+  <div class="page; f-20 lh-40" style="text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">参会注册</div>
       <div class="public_p pb-20 pl-30">
@@ -108,9 +108,9 @@
         <table border="1" cellpadding="0" cellspacing="0" style="width:100.0%;" width="100%">
           <tbody>
           <tr>
-            <th style=" height: 38px; width: 120px; text-align:center">注册人员类型<br/>(截止时间)</th>
-            <th style=" height: 38px; width: 120px; text-align:center">标准注册<br/>(10月31日)</th>
-            <th style=" height: 38px; width: 120px; text-align:center">晚期/现场注册<br/>(12月25日)</th>
+            <th style=" height: 38px; width: 160px; text-align:center">注册人员类型<br/>(截止时间)</th>
+            <th style=" height: 38px; width: 140px; text-align:center">标准注册<br/>(10月31日)</th>
+            <th style=" height: 38px; width: 140px; text-align:center">晚期/现场注册<br/>(12月25日)</th>
             <th style=" height: 38px; text-align:center">包含内容</th>
           </tr>
           <tr>
@@ -177,23 +177,22 @@
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>摘要截止日期: 2019年10月20日</p>
-            <p>全文截稿日期: 长年征稿（本批次7月30日截止）</p>
+            <p>摘要投稿: 2019年10月20日截止</p>
+            <p>全文投稿: 本批次7月30日截止</p>
             <p>会议日期:2019年12月26日-28日</p>
 						<p>参会注册截止: 2019年10月31日</p>
-						<p>**逾期未完成注册，将按照后期注册处理</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
         </ul>
       </div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
         <ul>
             <p>联系人：孙老师，刘老师</p>
 						<p>会务邮箱：icabst@apanse.com</p>
