--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -36,10 +36,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
-              Int’l Conf. On Advances in Biological Science and Technology<br/>
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
+              Int'l Conf On Advances in Biological Science and Technology<br/>
 							2019国际前沿生物科学与技术国际会议(ICABST2019)<br/>
-              2019年12月26日-28日
+              <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -85,23 +85,17 @@
 
 
   <!--快速链接 end-->
-  <div class="page; lh-40" style="border: 1px solid; border-color: #c3bfbf; border-bottom: hidden;">
+  <div class="page; f-20 lh-40" style="border: 1px solid; border-color: #c3bfbf; border-bottom: hidden; text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 
       <div class="about">
         <div class="background5" style="padding-left:55px;">会议简介</div>
 				<div class="public_p pl-30">
         <p>
-          2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会主办。
-        </p>
-				<p>
-					本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。
-				</p>
-        <p>
-          大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。
-        </p>
-        <p>
-					本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会主办。<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。
         </p>
       </div>
 			</div>
@@ -110,12 +104,12 @@
         <div class="background5" style="padding-left:55px;">大会通知</div>
 				<div class="public_p pl-30">
         <ul>
-          <li><a href="/cn/cfp" target="_blank" style="color: #102cf7">本届会议已开始征文（SCI、EI、ISTP期刊及会议论文）</a></li>
-					<li><a href="/cn/submit" target="_blank" style="color: #102cf7">在线提交参会信息入口已开放，请尽早提交参会信息</a></li>
-					<li><a href="/cn/program" target="_blank" style="color: #102cf7">大会详细时间安排已初步完成</a></li>
-          <li><a href="/cn/about" target="_blank" style="color: #102cf7">本届会议议题已定，将分为7个session召开</a></li>
-					<li><a href="/cn/organization" target="_blank" style="color: #102cf7">本届会议已得到若干学术单位、媒体支持</a></li>
-					<li><a href="/cn/venue" target="_blank" style="color: #102cf7">签证、及会场周边住宿信息请“会议地点”</a></li>
+          <li><a href="/cn/cfp" target="_blank" style="color: #102cf7"><u>本届会议已开始征文（SCI、EI、ISTP期刊及会议论文）</u></a></li>
+					<li><a href="/cn/submit" target="_blank" style="color: #102cf7"><u>在线提交参会信息入口已开放，请尽早提交参会信息</u></a></li>
+					<li><a href="/cn/program" target="_blank" style="color: #102cf7"><u>大会详细时间安排已初步完成</u></a></li>
+          <li><a href="/cn/about" target="_blank" style="color: #102cf7"><u>本届会议议题已定，将分为7个session召开</u></a></li>
+					<li><a href="/cn/organization" target="_blank" style="color: #102cf7"><u>本届会议已得到若干学术单位、媒体支持</u></a></li>
+					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>签证、及会场周边住宿信息请“会议地点”</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
@@ -143,23 +137,22 @@
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>摘要截止日期: 2019年10月20日</p>
-            <p>全文截稿日期: 长年征稿（本批次7月30日截止）</p>
+            <p>摘要投稿: 2019年10月20日截止</p>
+            <p>全文投稿: 本批次7月30日截止</p>
             <p>会议日期:2019年12月26日-28日</p>
 						<p>参会注册截止: 2019年10月31日</p>
-						<p>**逾期未完成注册，将按照后期注册处理</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
         </ul>
       </div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
         <ul>
             <p>联系人：孙老师，刘老师</p>
 						<p>会务邮箱：icabst@apanse.com</p>
