--- a/src/main/resources/templates/page/cn/venue.html
+++ b/src/main/resources/templates/page/cn/venue.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
-              Int’l Conf. On Advances in Biological Science and Technology<br/>
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
+              Int'l Conf On Advances in Biological Science and Technology<br/>
 							2019国际前沿生物科学与技术国际会议(ICABST2019)<br/>
-              2019年12月26日-28日
+              <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -65,7 +65,7 @@
 <!--header end-->
 
 <div class="w-1200 bg_white pt-30">
-	<div class="page; lh-40" style="border: 2px dashed; border-color: #c3bfbf; padding: 10px;">
+	<div class="page; f-20 lh-40" style="border: 2px dashed; border-color: #c3bfbf; padding: 10px; text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-6" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background3" style="padding-left:55px; line-height: 60px; padding-bottom: 8px;">&nbsp;&nbsp;会议地点</div>
       <div class="public_p pb-20 pl-30">
